# REGS

./: API_DOCUMENTATION.md  ARCHITECTURE.md  Dockerfile  ENTITY_RELATIONSHIP_DIAGRAM.md  README.md  SETUP_GUIDE.md  build_judge_image.sh  compose.yml  go.mod  go.sum  log_api.py  main.go  test.sh  upload_problem.sh  worker.py
114-framework/: .justfile
114-framework/114FinalQ001/: CMakeLists.txt  README.md  settings.yaml
114-framework/114FinalQ001/online-judge/: case2  case3.h  case4  case4.h  case5.h  result.xml
114-framework/114FinalQ001/solution/: media_pipe.h  media_type.h  out_case1.txt  out_case3.txt  out_case5.txt
114-framework/114FinalQ001/spec/: case.h  case1.h  case2.h  case3.h  case4.h  case5.h
114-framework/114FinalQ001/template/: CMakeLists.txt  media_pipe.h
114-framework/114FinalQ002/: CMakeLists.txt  README.md  settings.yaml
114-framework/114FinalQ002/online-judge/: case1  case1.h  case2  case2.h  case3  case3.h  case4.h  case5  case5.h  result.xml
114-framework/114FinalQ002/solution/: command.h  out_case4.txt
114-framework/114FinalQ002/spec/: case1.h  case2.h  case3.h  case4.h  case5.h
114-framework/114FinalQ002/template/: CMakeLists.txt  command.h
114-framework/114FinalQ003/: CMakeLists.txt  README.md  settings.yaml
114-framework/114FinalQ003/online-judge/: case1  case1.h  case2  case2.h  case3.h  case4.h  case5.h  result.xml
114-framework/114FinalQ003/solution/: Account.h  out_case3.txt  out_case4.txt  out_case5.txt
114-framework/114FinalQ003/spec/: case.h  case1.h  case2.h  case3.h  case4.h  case5.h
114-framework/114FinalQ003/template/: Account.h  CMakeLists.txt
114-framework/114FinalQ004/: CMakeLists.txt  README.md  settings.yaml
114-framework/114FinalQ004/online-judge/: case1  case1.h  case2  case2.h  case3.h  case4  case4.h  case5.h  result.xml
114-framework/114FinalQ004/solution/: game_room_sort.h  out_case3.txt  out_case5.txt  room_test_utils.h
114-framework/114FinalQ004/spec/: case1.h  case2.h  case3.h  case4.h  case5.h
114-framework/114FinalQ004/template/: CMakeLists.txt  game_room_sort.h
114-framework/114FinalQ005/: CMakeLists.txt  README.md  settings.yaml
114-framework/114FinalQ005/online-judge/: case1  case1.h  case2.h  case3.h  case4  case4.h  case5.h  result.xml
114-framework/114FinalQ005/solution/: generate.h  out_case2.txt  out_case3.txt  out_case5.txt  to_base.h
114-framework/114FinalQ005/spec/: case1.h  case2.h  case3.h  case4.h  case5.h
114-framework/114FinalQ005/template/: CMakeLists.txt  (+1 more)
114-framework/114FinalQ006/: CMakeLists.txt  README.md  settings.yaml
114-framework/docs/: HowToUse.md  salt.cmake  settings.yaml
api/: problem.go  stats.go  submission.go  user.go  utils.go
db/: db.go
internal/: package main.go
judge/: Dockerfile  judge.sh  judge_catch2.sh  run.sh
keys/: private.pem  public.pem
middleware/: jwt.go  rbac.go
model/: model.go
service/: judge.go  judge_test.go  queue.go
tests/: conftest.py  test_pipeline_and_db.py
tools/: generate_scores.sh  prepare_testdata.sh
(+20 files in other folders)
